--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-        "test": "jest --coverage --noStackTrace --silent --watchAll --verbose",
+        "test": "jest --coverage --noStackTrace ",
         "bills": "jest src/__tests__/Bills.js",
         "dashboard": "jest src/__tests__/Dashboard.js",
         "login": "jest src/__tests__/Login.js"
